syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc registra (RegistraChavePixRequest) returns (ListaChavePixResponse) {}

}

enum TipoDeChave{
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeConta{
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}

// registra chave pix
message RegistraChavePixRequest {
  string clientId =1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message ListaChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}